# warframe-tracker

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
examples/: custom-drops.json  owned.json
src/: arcanes.js  i18n.js  index.html  main.js  modal.js  primes.js  settings.js  styles.css  updater.html  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: data.rs  market.rs  mod.rs  oauth.rs  tasks.rs  updater.rs
src/lib/: auth.js  drive.js  idb.js  storage.js  sync.js
src/locales/: en.json  pt.json
src/locales/en/: en.json
src/locales/pt/: arcane-names.pt.json  dropLocations.pt.json  pt.json
src/market/: filters.js  index.js  loader.js  renderer.js  state.js
src/mastery/: filters.js  index.js  loader.js  renderer.js  state.js
src/mods/: drop_sources.js  filters.js  index.js  loader.js  modal.js  renderer.js  state.js
src/primes/: filters.js  index.js  loader.js  renderer.js  state.js
src/styles/: arcanes.css  base.css  drop-table.css  filters.css  layout.css  market.css  mastery.css  misc-tracker.css  modal.css  mods.css  primes.css  settings.css  sidebar.css  sync-conflict.css  tasks.css  vendors.css
src/tasks/: index.js  loader.js  renderer.js  state.js
src/vendors/: index.js  loader.js  registry.js  renderer.js  schema.js  state.js
src/vendors/data/: sirius-and-orion.js  u40.js  u41.js  u42.js  u43.js
