[package]
name = "warframe-tracker"
version = "0.1.0"
description = "Warframe Arcane Collection Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "warframe_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
