[package]
name = "warframe-tracker"
version = "1.2.1"
description = "Warframe Arcane Collection Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "warframe_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
