[package]
name = "warframe-tracker"
version = "2.5.4"
description = "Warframe Arcane Collection Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "warframe_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dirs = "6"
log = "0.4"
tokio = { version = "1", features = ["net", "io-util", "rt", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "rustls-tls"] }
base64 = "0.22"
